--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Miquel Ruiz
 subtitle: Skateboard Lessons
 email: alxdna@gmail.com
 description: Get affordable skateboard lessons from a pro
-baseurl: "" # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
+baseurl: "/miguelskates" # the subpath of your site, e.g. /blog
+url: https://alxdna.net # the base hostname & protocol for your site
 author:
 street_address: 1234 Somewhere Road
 city: Nashville
