--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # site settings
-title: Miquel Ruiz
+title: Miguel Ruiz
 subtitle: Skateboard Lessons
-email: alxdna@gmail.com
-description: Get affordable skateboard lessons from a pro
-baseurl: "/miguelskates" # the subpath of your site, e.g. /blog
-url: https://alxdna.net # the base hostname & protocol for your site
+email: miguelruizskates@gmail.com
+description: Get skateboard lessons from a pro
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: https://miguelskates.com # the base hostname & protocol for your site
 author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
+street_address:
+city:
+state:
+zip_code:
 country: United States of America
-phone: (716) 555-5555
+phone:
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
@@ -21,13 +21,13 @@ tiles-count: 6
 500px_url:
 facebook_url:
 github_url:
-gitlab_url: https://gitlab.com/u/andrewbanchich
-googleplus_url: https://plus.google.com/u/0/+AndrewBanchich
-instagram_url: https://instagram.com
-linkedin_url: https://www.linkedin.com/in/andrew-banchich-a4ba1195
+gitlab_url:
+googleplus_url:
+instagram_url: https://www.instagram.com/michaelangelo_ruiz
+linkedin_url:
 pinterest_url:
 slack_url:
-twitter_url: https://twitter.com/andrewbanchich
+twitter_url:
 
 # build settings
 markdown: kramdown
