--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@ description: Get skateboard lessons from a pro
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://miguelskates.com # the base hostname & protocol for your site
 author:
-address_name: Cerritos Skate Park
-street_address: 19900 Bloomfield Avenue
-city: Cerritos
-state: CA
-zip_code: 90703
+address_name:
+street_address:
+city:
+state:
+zip_code:
 country:
 address_link: https://goo.gl/maps/M1bYj5Gkbt6M6vMCA
 phone: "(562) 746-2541"
